# prk-mcp-clinisight-ai-v1

./: .gitignore  README.md  app.py  demo.ipynb  main.py  mcp_tool.py  pyproject.toml  requirements.txt
functions/: diagnosis_symptoms.py  pubmed_articles.py  summarize_pubmed.py  symptom_extractor.py
